# skymap-harmony

./: .gitattributes  .gitignore  CLAUDE.md  README.md  build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
docs/: AUDIT_CLEANUP_SUMMARY.md  DATA_BACKUP.md  README.md  RELEASE_CLOSURE_20260709.md  TESTING.md  home-stats-regression-audit-2026-06.md  mobile-main-flow.md  photoreview-cross-platform-contract.md  release-v0.2-checklist.md  review-card-exchange-schema.md  review-card-template-spec.md  review-card-workflow.md  review-library-v0.md  review-library-v1.md  widget-style-lock.md
entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  jpeg_scanline_encoder.cpp  jpeg_scanline_encoder.h  napi_bridge.cpp
entry/src/main/cpp/types/libjpeg_encoder/: Index.d.ts  oh-package.json5
release-assets/: README.md
scripts/: assert_exif_device_report.mjs  audit_workspace_hygiene.mjs  build_hap.sh  find_ui_confirmation_button.mjs  generate_app_icon.swift  manage_signing_profile.mjs  run_device.sh  run_verification_suite.mjs  smoke_device.sh  test_app.sh  test_exif_on_device.sh  verify_button_taste.mjs  verify_canvas_media_uri_export_guard.mjs  verify_compact_typography.mjs  verify_compact_ui_tokens.mjs  verify_editor_direct_frame_export.mjs  verify_editor_template_selector.mjs  verify_editor_writing_experience.mjs  verify_exif_identity_merge.mjs  verify_exif_identity_recovery.mjs  verify_export_sync_copy_semantics.mjs  verify_feedback_semantics.mjs  (+66 more)
(+195 files in other folders)
